--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,18 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+# JDK and build tools
+**/jdk-*
+**/.tools/
+**/.mvn/
+mvnw
+mvnw.cmd
+
+# IDE
+.idea/
+.vscode/
+*.iml
+
+# Build output
+target/
+node_modules/
